// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataVisualization /> should render properly 1`] = `
.emotion-0 {
  height: 100%;
  background-color: #191919;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: -32px;
  padding-top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  overflow-y: hidden;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: #252525;
  padding-top: 16px;
  padding-bottom: 16px;
  margin-bottom: 1px;
}

.emotion-4:hover {
  background-color: #2e2e2e;
}

.emotion-4[aria-disabled=true] {
  color: #808080;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  color: #ffffff;
}

.emotion-4:hover svg,
.emotion-4.focus-visible:focus svg {
  opacity: 1;
}

.emotion-5 {
  position: relative;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #252525;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.6);
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  background-color: #252525;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-12 {
  font-size: 18px;
  line-height: 21px;
}

.emotion-13 {
  margin: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  max-width: 600px;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px;
  background-color: #4a4a4a;
  border-radius: 2px;
}

.emotion-16 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-17 {
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-18 {
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #b3b3b3;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-20 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-20:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-20[aria-disabled=true] {
  background-color: #808080;
}

.emotion-20,
.emotion-20:hover,
.emotion-20:visited {
  background-color: #808080;
}

.emotion-20:hover {
  background-color: #b3b3b3;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Filters"
          className="emotion-4"
          onClick={[Function]}
          title="Filters"
          type="button"
        >
          <div
            className="emotion-5"
          >
            <svg
              data-file-name="filter.svg"
              height={20}
            />
          </div>
        </button>
        <div
          className="emotion-6"
        />
      </div>
    </div>
    <div
      className="emotion-7"
    >
      <VisualizerNavigation />
      <div
        className="emotion-8"
      >
        <div
          className="emotion-9"
        >
          <div
            className="emotion-10"
          >
            <div
              className="emotion-11"
            >
              <h2
                className="emotion-12"
              >
                Create a Data Visualization
              </h2>
              <p
                className="emotion-13"
              >
                Data visualizations are representations of specific information from dataset. Adjusting the filters will allow you to dynamically view the effect they have on the search results. Data visualization can be shared with other users in the projects by exporting and then uploading.
              </p>
            </div>
          </div>
          <div
            className="emotion-14"
          >
            <div
              className="emotion-15"
            >
              <svg
                data-file-name="facet.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-16"
            >
              <div
                className="emotion-17"
              >
                Facet
              </div>
              <div
                className="emotion-18"
              >
                Shows the range of values and the number of each for one for a selected field.
              </div>
            </div>
            <div
              className="emotion-19"
            >
              <button
                className="emotion-20"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
          <div
            className="emotion-14"
          >
            <div
              className="emotion-15"
            >
              <svg
                data-file-name="range.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-16"
            >
              <div
                className="emotion-17"
              >
                Range
              </div>
              <div
                className="emotion-18"
              >
                Shows the min, max, mean, median, and mode for the numerical values of a selected field.
              </div>
            </div>
            <div
              className="emotion-19"
            >
              <button
                className="emotion-20"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
          <div
            className="emotion-14"
          >
            <div
              className="emotion-15"
            >
              <svg
                data-file-name="histogram.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-16"
            >
              <div
                className="emotion-17"
              >
                Histogram
              </div>
              <div
                className="emotion-18"
              >
                Shows the distribution of assets within value groups.
              </div>
            </div>
            <div
              className="emotion-19"
            >
              <button
                className="emotion-20"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DataVisualization /> should render properly 2`] = `
.emotion-0 {
  height: 100%;
  background-color: #191919;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: -32px;
  padding-top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  overflow-y: hidden;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: #252525;
  padding-top: 16px;
  padding-bottom: 16px;
  margin-bottom: 1px;
}

.emotion-4:hover {
  background-color: #2e2e2e;
}

.emotion-4[aria-disabled=true] {
  color: #808080;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  color: #ffffff;
}

.emotion-4:hover svg,
.emotion-4.focus-visible:focus svg {
  opacity: 1;
}

.emotion-5 {
  position: relative;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #252525;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 16px;
  overflow: auto;
  box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.6);
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 16px;
}

.emotion-10 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 16px;
}

.emotion-10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10[aria-disabled=true] {
  background-color: #808080;
}

.emotion-10,
.emotion-10:hover,
.emotion-10:visited {
  background-color: #808080;
}

.emotion-10:hover {
  background-color: #b3b3b3;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 4px;
}

.emotion-13 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  margin-right: 16px;
}

.emotion-13:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-13[aria-disabled=true] {
  background-color: #808080;
}

.emotion-13,
.emotion-13:hover,
.emotion-13:visited {
  background-color: #808080;
}

.emotion-13:hover {
  background-color: #b3b3b3;
}

.emotion-14 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Filters"
          className="emotion-4"
          onClick={[Function]}
          title="Filters"
          type="button"
        >
          <div
            className="emotion-5"
          >
            <svg
              data-file-name="filter.svg"
              height={20}
            />
          </div>
        </button>
        <div
          className="emotion-6"
        />
      </div>
    </div>
    <div
      className="emotion-7"
    >
      <VisualizerNavigation />
      <div
        className="emotion-8"
      >
        <div
          className="emotion-9"
        >
          <button
            aria-label="Add Chart"
            className="emotion-10"
            onClick={[Function]}
            type="button"
          >
            <div
              className="emotion-11"
            >
              <div
                className="emotion-12"
              >
                <svg
                  data-file-name="plus.svg"
                  height={20}
                />
              </div>
              Add Chart
            </div>
          </button>
          <button
            className="emotion-13"
            onClick={[Function]}
            type="button"
          >
            Delete All
          </button>
        </div>
        <div
          className="emotion-14"
        >
          <Charts
            charts={
              Array [
                Object {
                  "id": "972a8ab5-cdcb-4eea-ada7-f1c88d997fed",
                  "type": "facet",
                },
              ]
            }
            dispatch={[Function]}
            layouts={Object {}}
            setLayouts={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DataVisualization /> should render properly 3`] = `
.emotion-0 {
  height: 100%;
  background-color: #191919;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: -32px;
  padding-top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  overflow-y: hidden;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: #252525;
  padding-top: 16px;
  padding-bottom: 16px;
  margin-bottom: 1px;
}

.emotion-4:hover {
  background-color: #2e2e2e;
}

.emotion-4[aria-disabled=true] {
  color: #808080;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  color: #ffffff;
}

.emotion-4:hover svg,
.emotion-4.focus-visible:focus svg {
  opacity: 1;
}

.emotion-5 {
  position: relative;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #252525;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.6);
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  background-color: #252525;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-12 {
  font-size: 18px;
  line-height: 21px;
}

.emotion-13 {
  margin: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  max-width: 600px;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-15 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15[aria-disabled=true] {
  background-color: #808080;
}

.emotion-15,
.emotion-15:hover,
.emotion-15:visited {
  background-color: #808080;
}

.emotion-15:hover {
  background-color: #b3b3b3;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px;
  background-color: #4a4a4a;
  border-radius: 2px;
}

.emotion-18 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-19 {
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-20 {
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #b3b3b3;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Filters"
          className="emotion-4"
          onClick={[Function]}
          title="Filters"
          type="button"
        >
          <div
            className="emotion-5"
          >
            <svg
              data-file-name="filter.svg"
              height={20}
            />
          </div>
        </button>
        <div
          className="emotion-6"
        />
      </div>
    </div>
    <div
      className="emotion-7"
    >
      <VisualizerNavigation />
      <div
        className="emotion-8"
      >
        <div
          className="emotion-9"
        >
          <div
            className="emotion-10"
          >
            <div
              className="emotion-11"
            >
              <h2
                className="emotion-12"
              >
                Create a Data Visualization
              </h2>
              <p
                className="emotion-13"
              >
                Data visualizations are representations of specific information from dataset. Adjusting the filters will allow you to dynamically view the effect they have on the search results. Data visualization can be shared with other users in the projects by exporting and then uploading.
              </p>
            </div>
            <div
              className="emotion-14"
            >
              <button
                className="emotion-15"
                onClick={[Function]}
                type="button"
              >
                Cancel
              </button>
            </div>
          </div>
          <div
            className="emotion-16"
          >
            <div
              className="emotion-17"
            >
              <svg
                data-file-name="facet.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-18"
            >
              <div
                className="emotion-19"
              >
                Facet
              </div>
              <div
                className="emotion-20"
              >
                Shows the range of values and the number of each for one for a selected field.
              </div>
            </div>
            <div
              className="emotion-21"
            >
              <button
                className="emotion-15"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
          <div
            className="emotion-16"
          >
            <div
              className="emotion-17"
            >
              <svg
                data-file-name="range.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-18"
            >
              <div
                className="emotion-19"
              >
                Range
              </div>
              <div
                className="emotion-20"
              >
                Shows the min, max, mean, median, and mode for the numerical values of a selected field.
              </div>
            </div>
            <div
              className="emotion-21"
            >
              <button
                className="emotion-15"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
          <div
            className="emotion-16"
          >
            <div
              className="emotion-17"
            >
              <svg
                data-file-name="histogram.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-18"
            >
              <div
                className="emotion-19"
              >
                Histogram
              </div>
              <div
                className="emotion-20"
              >
                Shows the distribution of assets within value groups.
              </div>
            </div>
            <div
              className="emotion-21"
            >
              <button
                className="emotion-15"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DataVisualization /> should render properly 4`] = `
.emotion-0 {
  height: 100%;
  background-color: #191919;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: -32px;
  padding-top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  overflow-y: hidden;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: #252525;
  padding-top: 16px;
  padding-bottom: 16px;
  margin-bottom: 1px;
}

.emotion-4:hover {
  background-color: #2e2e2e;
}

.emotion-4[aria-disabled=true] {
  color: #808080;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  color: #ffffff;
}

.emotion-4:hover svg,
.emotion-4.focus-visible:focus svg {
  opacity: 1;
}

.emotion-5 {
  position: relative;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #252525;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.6);
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  background-color: #252525;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-12 {
  font-size: 18px;
  line-height: 21px;
}

.emotion-13 {
  margin: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  max-width: 600px;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px;
  background-color: #4a4a4a;
  border-radius: 2px;
}

.emotion-16 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-17 {
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-18 {
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #b3b3b3;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-20 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-20:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-20[aria-disabled=true] {
  background-color: #808080;
}

.emotion-20,
.emotion-20:hover,
.emotion-20:visited {
  background-color: #808080;
}

.emotion-20:hover {
  background-color: #b3b3b3;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Filters"
          className="emotion-4"
          onClick={[Function]}
          title="Filters"
          type="button"
        >
          <div
            className="emotion-5"
          >
            <svg
              data-file-name="filter.svg"
              height={20}
            />
          </div>
        </button>
        <div
          className="emotion-6"
        />
      </div>
    </div>
    <div
      className="emotion-7"
    >
      <VisualizerNavigation />
      <div
        className="emotion-8"
      >
        <div
          className="emotion-9"
        >
          <div
            className="emotion-10"
          >
            <div
              className="emotion-11"
            >
              <h2
                className="emotion-12"
              >
                Create a Data Visualization
              </h2>
              <p
                className="emotion-13"
              >
                Data visualizations are representations of specific information from dataset. Adjusting the filters will allow you to dynamically view the effect they have on the search results. Data visualization can be shared with other users in the projects by exporting and then uploading.
              </p>
            </div>
          </div>
          <div
            className="emotion-14"
          >
            <div
              className="emotion-15"
            >
              <svg
                data-file-name="facet.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-16"
            >
              <div
                className="emotion-17"
              >
                Facet
              </div>
              <div
                className="emotion-18"
              >
                Shows the range of values and the number of each for one for a selected field.
              </div>
            </div>
            <div
              className="emotion-19"
            >
              <button
                className="emotion-20"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
          <div
            className="emotion-14"
          >
            <div
              className="emotion-15"
            >
              <svg
                data-file-name="range.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-16"
            >
              <div
                className="emotion-17"
              >
                Range
              </div>
              <div
                className="emotion-18"
              >
                Shows the min, max, mean, median, and mode for the numerical values of a selected field.
              </div>
            </div>
            <div
              className="emotion-19"
            >
              <button
                className="emotion-20"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
          <div
            className="emotion-14"
          >
            <div
              className="emotion-15"
            >
              <svg
                data-file-name="histogram.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-16"
            >
              <div
                className="emotion-17"
              >
                Histogram
              </div>
              <div
                className="emotion-18"
              >
                Shows the distribution of assets within value groups.
              </div>
            </div>
            <div
              className="emotion-19"
            >
              <button
                className="emotion-20"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
